invidious-app/companion-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: invidious-companion
  namespace: invidious
spec:
  selector:
    matchLabels:
      app: invidious-companion
  serviceName: invidious-companion
  replicas: 1
  template:
    metadata:
      labels:
        app: invidious-companion
    spec:
      containers:
        - name: invidious-companion
          image: quay.io/invidious/invidious-companion:latest@sha256:a74150e9eafab7cb4b668380b3a03037ee6ddd5d7ff9d90916f8b49c66a85fee
          ports:
            - containerPort: 8282
          volumeMounts:
            - name: invidious-companion-cache
              mountPath: /var/tmp/youtubei.js
  volumeClaimTemplates:
    - metadata:
        name: invidious-companion-cache
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
