invidious-app/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: invidious
  namespace: invidious
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`inv.kentaro1043.com`) && !(Path(`/latest_version`) || PathPrefix(`/api/manifest/dash/id/`) || PathPrefix(`/videoplayback*`))
      services:
        - name: invidious
          port: 3000
    - kind: Rule
      match: Host(`inv.kentaro1043.com`) && (Path(`/latest_version`) || PathPrefix(`/api/manifest/dash/id/`) || PathPrefix(`/videoplayback*`))
      services:
        - name: invidious-companion
          port: 8282

  tls:
    secretName: invidious-tls
